--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#333333" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>WhatsThat</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#333333" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>WhatsThat</title>
+  <meta name="Description" content="Translate words to multiple languages in one click">
+  <meta name="Keywords" content="translate, multiple languages, translate text">
+  <meta name="author" content="@thelittlewonder">
+</head>
+
+<body>
+  <noscript>I am gonna sleep till you turn on the Javascript.
+    <pre>
+    _____|~~\_____      _____________
+    _-~               \    |    \
+    _-    | )     \    |__/   \   \
+    _-         )   |   |  |     \  \
+    _-    | )     /    |--|      |  |
+   __-_______________ /__/_______|  |_________
+  (                |----         |  |
+   `---------------'--\\\\      .`--'
+                                `||||
+   </pre>
+  </noscript>
+  <div id="root"></div>
+</body>
+
 </html>
