--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#333333" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Primary Meta Tags -->
   <title>WhatsThat</title>
-  <meta name="Description" content="Translate words to multiple languages in one click">
+  <meta name="title" content="WhatsThat">
+  <meta name="description" content="Translate words to multiple languages in one click">
   <meta name="Keywords" content="translate, multiple languages, translate text">
   <meta name="author" content="@thelittlewonder">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://whats-that.tech/">
+  <meta property="og:title" content="WhatsThat">
+  <meta property="og:description" content="Translate words to multiple languages in one click">
+  <meta property="og:image" content="https://i.imgur.com/67IMsN1.png">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://whats-that.tech/">
+  <meta property="twitter:title" content="WhatsThat">
+  <meta property="twitter:description" content="Translate words to multiple languages in one click">
+  <meta property="twitter:image" content="https://i.imgur.com/67IMsN1.png">
 </head>
 
 <body>
