compress card image

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
   <meta property="og:url" content="https://whats-that.tech/">
   <meta property="og:title" content="WhatsThat">
   <meta property="og:description" content="Translate words to multiple languages in one click">
-  <meta property="og:image" content="https://i.imgur.com/67IMsN1.png">
+  <meta property="og:image" content="https://i.imgur.com/54Aln5L.png">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://whats-that.tech/">
   <meta property="twitter:title" content="WhatsThat">
   <meta property="twitter:description" content="Translate words to multiple languages in one click">
-  <meta property="twitter:image" content="https://i.imgur.com/67IMsN1.png">
+  <meta property="twitter:image" content="https://i.imgur.com/54Aln5L.png">
 </head>
 
 <body>
